<resources>
    <string name="app_name">PasswordGenerator</string>
    <string name="app_name_splash_title">Password Generator</string>
    <string name="generate_tv">Click on Generate button</string>
    <string name="error_tv">ERROR !!!</string>
    <string name="shortPassword">Password must be greater than 8!</string>
    <string name="emptyPassword">Please type a length of password!</string>
    <string name="emptyCheckBoxes">Please select at least \none password content type!</string>
    <string name="zeroPassword">Enter Password length!</string>
    <string name="copy_btn">COPY</string>
    <string name="save_btn">SAVE TO DB</string>
    <string name="open_db_btn">Open data base</string>
    <string name="back_btn">Back to generate</string>
    <string name="choose_the_password_content">Chose the password Content:</string>
    <string name="lower_case_checkbox">Lower Case</string>
    <string name="upper_case_checkbox">Upper Case</string>
    <string name="numeric_value_checkbox">Numeric Value</string>
    <string name="special_chars_checkbox">Special Chars</string>
    <string name="password_size">Password Size</string>
    <string name="generate_btn">GENERATE</string>
</resources>